--- a/11_select-and-share-place/index.html
+++ b/11_select-and-share-place/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Understanding TypeScript</title>
+    <script src="TEST_GOOGLE_MAP" async defer></script>
     <script src="dist/bundle.js" defer></script>
     <link rel="stylesheet" href="app.css" />
   </head>
